Optimisation du code Bugfix stripe des lignes

--- a/src/TableBeautifuller.scss
+++ b/src/TableBeautifuller.scss
@@ -65,15 +65,13 @@ $backgroundWhite: #fff;
     }
 
     // Coloration ligne pair et impair
-    &.tableRowsColors {
-        tbody {
-            tr:nth-child(odd) {
-                background-color: $oddRowColor;
-            }
+    tbody {
+        .odd {
+            background-color: $oddRowColor;
+        }
 
-            tr:nth-child(even) {
-                background-color: $evenRowColor;
-            }
+        .even {
+            background-color: $evenRowColor;
         }
     }
 
