--- a/src/TableBeautifuller.scss
+++ b/src/TableBeautifuller.scss
@@ -153,6 +153,7 @@ $backgroundWhite: #fff;
                 box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
                 z-index: 1;
                 right: 20px;
+                padding: 20px 10px 10px 10px;
 
                 .dropdown-content {
                     display: flex;
